Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102431

QBENCHMARK triggers compiler warning

    XMLWordPrintable

Details

    • fbe6f19853 (qt/qtbase/dev) fbe6f19853 (qt/tqtc-qtbase/dev) 2284aa7622 (qt/qtbase/6.3) 2284aa7622 (qt/tqtc-qtbase/6.3)

    Description

      Actual behaviour:

      Using QBENCHMARK with newer Clang compiler with -Wreserved-identifier option triggers a compiler warning:

      mycppfile.cpp:580:9: warning: identifier '_iteration_controller' is reserved because it starts with '_' [clang-diagnostic-reserved-identifier]
               QBENCHMARK
               ^
      /usr/include/x86_64-linux-gnu/qt5/QtTest/qbenchmark.h:77:47: note: expanded from macro 'QBENCHMARK'
               for (QTest::QBenchmarkIterationController __iteration_controller;
               ^

      Expected behaviour:

      Using QBENCHMARK does not trigger any compiler warnings.

      Attachments

        For Gerrit Dashboard: QTBUG-102431
        # Subject Branch Project Status CR V

        Activity

          People

            thiago Thiago Macieira
            sommerluk Lukas Sommer
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes