QBENCHMARK: Replace the double underscore with something not reserved

Clang with -Wreserved-identifier complains.

Pick-to: 6.3
Fixes: QTBUG-102431
Change-Id: If2e0f4b2190341ebaa31fffd16e441ee35b0e3b9
Reviewed-by: Giuseppe D'Angelo <giuseppe.dangelo@kdab.com>